# DynaMER-ADF

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: 01_dataset_audit.yaml  02_prepare_dataset_manifests.yaml  03_prepare_leakage_safe_splits.yaml  04_prepare_model_ready_datasets.yaml  05_verify_dataset_loaders.yaml  06_define_model_data_modules.yaml  07_define_model_architecture.yaml  08_prepare_temporal_feature_views.yaml  09_verify_temporal_data_modules.yaml  10_training_loop_smoke_test.yaml  11_full_experiment_registry.yaml  12_controlled_full_training.yaml  13_summarize_paper_grade_results.yaml  14_train_baselines.yaml  15B_train_dynamer_bitcn_r.yaml  15_train_dynamer_bitcn.yaml  15_train_dynamer_v2.yaml  15_train_dynamer_v2b.yaml  16_train_dynamer_adf.yaml  16_train_dynamer_adf_amigos.yaml  16_train_dynamer_adf_dreamer.yaml  16_train_dynamer_v3.yaml  16_train_dynamer_v3_amigos.yaml  16_train_dynamer_v3_dreamer.yaml  17_train_dynamer_adf_ls.yaml  17_train_dynamer_v4.yaml  18_train_dynamer_anchor.yaml  18_train_dynamer_v5.yaml  19B_train_dynamer_adf_ablation.yaml  19B_train_dynamer_v3_ablation.yaml  config.yaml  local_paths.example.yaml  paper_display_names.yaml
docs/: dataset_access.md  release_file_inventory_final.csv  release_notes_v0.1.0.md  reproduce_results.md  result_table_mapping.md  script_map.md
scripts/: 00_check_environment.py  01_dataset_audit.py  02_prepare_dataset_manifests.py  03_prepare_leakage_safe_splits.py  04_prepare_model_ready_datasets.py  05_verify_dataset_loaders.py  (+33 more)
(+28 files in other folders)
