[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamer-adf"
version = "0.1.0"
description = "Leakage-safe modality-adaptive temporal fusion for multimodal physiological emotion recognition"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
